// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="checkbox-in-color-context">
    <input
      id="checkbox-in-color-context"
      type="checkbox"
      checked
      aria-describedby="mnsry0bqm572"
    >
    <label
      data-weight="regular"
      for="checkbox-in-color-context"
    >
      Checkbox label
    </label>
    <div
      data-field="description"
      id="mnsry0bqm572"
    >
      Description
    </div>
  </ds-field>
</div>
`;

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="checkbox-preview">
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="mnsry0bqm573"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="mnsry0bqm573"
  >
    Description
  </div>
</ds-field>
`;

exports[`One Option 1`] = `
<fieldset aria-labelledby="components-checkbox--one-optionlegend components-checkbox--one-optiondescription">
  <legend
    id="components-checkbox--one-optionlegend"
    data-weight="medium"
  >
    Bekreft at du er over 18 år
  </legend>
  <p
    data-variant="default"
    id="components-checkbox--one-optiondescription"
  >
    For at vi skal kunne sende deg opplysningen du ber om, må du bekrefte at du er myndig.
  </p>
  <ds-field data-clickdelegatefor="components-checkbox--one-option">
    <input
      id="components-checkbox--one-option"
      type="checkbox"
      value="samtykke"
    >
    <label
      data-weight="regular"
      for="components-checkbox--one-option"
    >
      Jeg bekrefter at jeg er over 18 år
    </label>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="checkbox-preview">
  <input
    id="checkbox-preview"
    type="checkbox"
    value="value"
    aria-describedby="mnsry0bqm571"
  >
  <label
    data-weight="regular"
    for="checkbox-preview"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="mnsry0bqm571"
  >
    Description
  </div>
</ds-field>
`;
